Add MANY ingots

--- a/src/main/resources/assets/easycraft/lang/en_us.lang
+++ b/src/main/resources/assets/easycraft/lang/en_us.lang
@@ -58,3 +58,7 @@ advancements.ec.haveSculkIngot.title=1.19 era!
 advancements.ec.haveSculkIngot.descr=Have a sculk ingot.
 advancements.ec.haveSculk.title=This is too grind!
 advancements.ec.haveSculk.descr=This game is too grind.           Have a sculk.
+advancements.ec.haveOmega.title=The beginning of everything.
+advancements.ec.haveOmega.descr=This Mod's beginning.      Get a OMEGA gem.
+advancements.ec.pa.title=Pickaxe-Strike!
+advancements.ec.pa.descr=Use any of pickaxes and attack a mob.
