--- a/src/main/resources/assets/easycraft/lang/zh_cn.lang
+++ b/src/main/resources/assets/easycraft/lang/zh_cn.lang
@@ -58,3 +58,7 @@ advancements.ec.haveSculkIngot.title=1.19时代来临了！
 advancements.ec.haveSculkIngot.descr=获得一个幽匿锭
 advancements.ec.haveSculk.title=这太肝了!
 advancements.ec.haveSculk.descr=这游戏太肝了！        拥有一块幽匿块.
+advancements.ec.haveOmega.title=一切的开始
+advancements.ec.haveOmega.descr=这个Mod的开始。    得到一个OMEGA宝石
+advancements.ec.pa.title=镐击!
+advancements.ec.pa.descr=用任意一把镐击打任意一种敌对生物。
